--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,14 @@
       }
       </style>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo_final.jpg" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_final.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" type="text/css" />
     <link href="https://terrymooreii.github.io/materialize-social/materialize-social.css" rel="stylesheet" type="text/css" />
 
@@ -84,19 +84,12 @@ p {
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <title>Best-Quality Development</title>
+    <title>React App</title>
   </head>
   <body style="font-family: 'Open Sans', sans-serif !important;">
     <div class="parallax-container" style="height:100%;width:100%;position: fixed;opacity: .85;">
       <div class="parallax"><img src="background1.png" class="responsive-img"></img></div>
-      <div style="margin-top:350px;" class="show-on-medium-and-up hide-on-small-only">
-        <h4 class="center-align" style="align-content: center;color:powderblue;font-weight: 700;font-size: 3.8rem;">Actively Seeking Full-time Opportunities</h4>
-        <h4 class="center-align" style="align-content: center;color:powderblue;font-weight: 700;font-size: 3.8rem;">As a Software Developer</h4>
-      </div>
-      <div style="margin-top:150px;" class="hide-on-med-and-up show-on-small">
-        <h4 class="center-align" style="align-content: center;color:powderblue;font-weight: 700;font-size: 2.8rem;">Actively Seeking Full-time Opportunities</h4>
-        <h4 class="center-align" style="align-content: center;color:powderblue;font-weight: 700;font-size: 2.8rem;">As a Software Developer</h4>
-      </div>
+    
     </div>
     
     <div id="root"></div>
